--- a/_layouts/collections.html
+++ b/_layouts/collections.html
@@ -15,7 +15,7 @@ layout: article
 
 {% for coll in site.staff_members %}
     <a href="{{ coll.url }}">
-        {{ coll.title }} - {{ coll.chapter }}
+        {{ coll.title }} -- {{ coll.chapter }}
     </a>
     <br>
 {% endfor %}
